--- a/ScienceAndAnalyticsOfData/Activities/Actividad2analisisPandas.ipynb
+++ b/ScienceAndAnalyticsOfData/Activities/Actividad2analisisPandas.ipynb
@@ -37,8 +37,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*   NOMBRE: ---------------------------------------------------------\n",
-        "*   MATRÍCULA: ----------------------------------------------------\n"
+        "*   NOMBRE: Isaac Carballo Perez\n",
+        "*   MATRÍCULA: A01796987\n"
       ],
       "metadata": {
         "id": "6q35__bSBB3G"
@@ -85,12 +85,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "F5JognteLaJV"
+        "id": "F5JognteLaJV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9aec16c-a61b-417b-84e2-071f56e2b324"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-shape:\n",
+            "(43800, 6)\n",
+            "-columns:\n",
+            "Index(['Site', 'Species', 'ReadingDateTime', 'Value', 'Units',\n",
+            "       'Provisional or Ratified'],\n",
+            "      dtype='object')\n",
+            "-head:\n",
+            "  Site Species   ReadingDateTime  Value   Units Provisional or Ratified\n",
+            "0  CT3      NO  01/01/2017 00:00    3.5  ug m-3                       R\n",
+            "1  CT3      NO  01/01/2017 01:00    3.6  ug m-3                       R\n",
+            "2  CT3      NO  01/01/2017 02:00    2.2  ug m-3                       R\n",
+            "3  CT3      NO  01/01/2017 03:00    2.1  ug m-3                       R\n",
+            "4  CT3      NO  01/01/2017 04:00    3.3  ug m-3                       R\n",
+            "-tail:\n",
+            "      Site Species   ReadingDateTime  Value   Units Provisional or Ratified\n",
+            "43795  CT3   PM2.5  31/12/2017 19:00   -2.0  ug m-3                       R\n",
+            "43796  CT3   PM2.5  31/12/2017 20:00    6.0  ug m-3                       R\n",
+            "43797  CT3   PM2.5  31/12/2017 21:00    5.0  ug m-3                       R\n",
+            "43798  CT3   PM2.5  31/12/2017 22:00    5.0  ug m-3                       R\n",
+            "43799  CT3   PM2.5  31/12/2017 23:00    6.0  ug m-3                       R\n",
+            "-dtypes:\n",
+            "Site                        object\n",
+            "Species                     object\n",
+            "ReadingDateTime             object\n",
+            "Value                      float64\n",
+            "Units                       object\n",
+            "Provisional or Ratified     object\n",
+            "dtype: object\n",
+            "Site\n",
+            "Species\n",
+            "ReadingDateTime\n",
+            "Value\n",
+            "Units\n",
+            "Provisional or Ratified\n"
+          ]
+        }
+      ],
+      "source": [
+        "from posixpath import sep\n",
+        "# importing pandas and name it as pd\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Reading csv and loading in air_df pandas DataFrame\n",
+        "air_df = pd.read_csv(\"/LaqnData.csv\")\n",
+        "\n",
+        "# printing shape, rows, columns, head(), tail() and dtypes\n",
+        "print(\"-shape:\", air_df.shape, sep=\"\\n\")\n",
+        "print(\"-columns:\", air_df.columns, sep=\"\\n\")\n",
+        "print(\"-head:\", air_df.head(), sep=\"\\n\")\n",
+        "print(\"-tail:\", air_df.tail(), sep=\"\\n\")\n",
+        "print(\"-dtypes:\", air_df.dtypes, sep=\"\\n\")\n",
+        "\n",
+        "# Calculating the percentage of missing values per column\n",
+        "rows_number = air_df.shape[0]\n",
+        "column_indexes = air_df.columns\n",
+        "for col_name in column_indexes:\n",
+        "  print(col_name)"
+      ]
     },
     {
       "cell_type": "markdown",
