--- a/ScienceAndAnalyticsOfData/Activities/Actividad2analisisPandas.ipynb
+++ b/ScienceAndAnalyticsOfData/Activities/Actividad2analisisPandas.ipynb
@@ -85,13 +85,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {
         "id": "F5JognteLaJV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d9aec16c-a61b-417b-84e2-071f56e2b324"
+        "outputId": "efbc84b5-6c98-40be-d69c-6c1e921c279b"
       },
       "outputs": [
         {
@@ -126,12 +126,12 @@
             "Units                       object\n",
             "Provisional or Ratified     object\n",
             "dtype: object\n",
-            "Site\n",
-            "Species\n",
-            "ReadingDateTime\n",
-            "Value\n",
-            "Units\n",
-            "Provisional or Ratified\n"
+            "Percentage of missing vals for col \"Site\" is 0.00%\n",
+            "Percentage of missing vals for col \"Species\" is 0.00%\n",
+            "Percentage of missing vals for col \"ReadingDateTime\" is 0.00%\n",
+            "Percentage of missing vals for col \"Value\" is 7.37%\n",
+            "Percentage of missing vals for col \"Units\" is 0.00%\n",
+            "Percentage of missing vals for col \"Provisional or Ratified\" is 0.00%\n"
           ]
         }
       ],
@@ -141,7 +141,7 @@
         "import pandas as pd\n",
         "\n",
         "# Reading csv and loading in air_df pandas DataFrame\n",
-        "air_df = pd.read_csv(\"/LaqnData.csv\")\n",
+        "air_df = pd.read_csv(\"/content/LaqnData.csv\")\n",
         "\n",
         "# printing shape, rows, columns, head(), tail() and dtypes\n",
         "print(\"-shape:\", air_df.shape, sep=\"\\n\")\n",
@@ -154,7 +154,10 @@
         "rows_number = air_df.shape[0]\n",
         "column_indexes = air_df.columns\n",
         "for col_name in column_indexes:\n",
-        "  print(col_name)"
+        "  number_of_missing_col_vals = air_df[f'{col_name}'].isnull().sum()\n",
+        "  null_ratio = number_of_missing_col_vals/ rows_number\n",
+        "  null_percentage = null_ratio * 100\n",
+        "  print(f'Percentage of missing vals for col \"{col_name}\" is {null_percentage:.2f}%')"
       ]
     },
     {
